# babybot

./: .breakpoints  .gitignore  README.md  main.py  music.py  pyproject.toml  requirements.txt
cogs/: ban.py  clear.py  gayrate.py  guess_song.py  help.py  join_leave.py  kick.py  kick_ban.py  load.py  music.py  on_command_error.py  on_message.py  start.py  unban.py
old/: main.py
utils/: bot.py  config.py  get_source.py  keep_alive.py  member_counters.py  status_looper.py
