[tool.poetry]
name = "repl_python3_beta_utils-bot-rewrite"
version = "0.1.0"
description = ""
authors = ["Xephire <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
discord-voice = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
